--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ decorator==5.1.1
 deep-translator==1.11.4
 dj-database-url==2.2.0
 Django==5.1.1
-dlib==19.24.4
+dlib==19.22.0  # Adjusted version for compatibility
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.0.1
